--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.80.7",
     "autoprefixer": "10.4.20",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -62,6 +63,8 @@
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "vaul": "^1.1.2",
+    "viem": "2.x",
+    "wagmi": "^2.15.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
